src/fhiclcpp/fhiclcpp/test/testFiles/fail/assoc2_fail.fcl
#----------------------------------------------------
# Testing Incorrect Association Syntax
# What's Wrong: Use of Equals(=) is not valid.
#----------------------------------------------------
y = 5
